EXPERIMENTAL 2.7 release Removed TURLProvider, replaced with MVC routes Known bugs: new pages are visible only after click on "Clear cache"
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@244 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -13,29 +13,30 @@
       <section name="imageOptimisation" type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
     </sectionGroup>
     
-	<sectionGroup name="bundleTransformer">
-		<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
-		<section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
-		<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-	</sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+	  <sectionGroup name="bundleTransformer">
+		  <section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
+		  <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
+		  <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+	  </sectionGroup>
+  </configSections>
   <rssConfiguration>
     <providers>
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
     </providers>
   </rssConfiguration>
-    <!--
+    
   <urlrewritingnet rewriteOnlyVirtualUrls="true" contextItemsPrefix="QueryString" xmlns="http://www.urlrewriting.net/schemas/config/2006/07">
-    <providers>
+    <!--<providers>
       <add name="TURLProvider" type="One.NET.BLL.TURLProvider" securityTrimmingEnabled="true" />
-    </providers>
+    </providers>-->
     <rewrites>
-      <add name="svetavladarRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
-      <add name="MainRedirect" provider="TURLProvider" />
+      <add name="underscoreRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
+      <!--<add name="MainRedirect" provider="TURLProvider" />-->
     </rewrites>
-  </urlrewritingnet> -->
+  </urlrewritingnet> 
 	<log4net debug="true">
 		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
-			<param name="File" value="c:\\iis_sites\\zivimlajf.w.renderspace.net\\zivimlajf.log"/>
+			<param name="File" value="c:\\logs\\test.log"/>
 			<param name="AppendToFile" value="true"/>
 			<rollingStyle value="Date"/>
 			<datePattern value="yyyyMMdd"/>
