--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
     <section name="rssConfiguration" type="One.Net.BLL.WebConfig.RssConfiguration" />
     <section name="urlrewritingnet" requirePermission="false" type="UrlRewritingNet.Configuration.UrlRewriteSection, UrlRewritingNet.UrlRewriter" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -24,7 +24,18 @@
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
     </providers>
   </rssConfiguration>
-    
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="asyncFile" xsi:type="AsyncWrapper">
+        <target name="logfile" xsi:type="File" fileName="c:\logs\demo.log" />
+      </target>
+    </targets>
+
+    <rules>
+      <logger name="*" minlevel="Info" writeTo="asyncFile" />
+    </rules>
+
+  </nlog>
   <urlrewritingnet rewriteOnlyVirtualUrls="true" contextItemsPrefix="QueryString" xmlns="http://www.urlrewriting.net/schemas/config/2006/07">
     <!--<providers>
       <add name="TURLProvider" type="One.NET.BLL.TURLProvider" securityTrimmingEnabled="true" />
@@ -33,29 +44,7 @@
       <add name="underscoreRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
       <!--<add name="MainRedirect" provider="TURLProvider" />-->
     </rewrites>
-  </urlrewritingnet> 
-	<log4net debug="true">
-		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
-			<param name="File" value="c:\\logs\\test.log"/>
-			<param name="AppendToFile" value="true"/>
-			<rollingStyle value="Date"/>
-			<datePattern value="yyyyMMdd"/>
-			<layout type="log4net.Layout.PatternLayout,log4net">
-				<param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
-			</layout>
-		</appender>
-		<root>
-			<priority value="DEBUG"/>
-			<appender-ref ref="LogFileAppender"/>
-		</root>
-		<category name="VFSSiteMapProvider"><priority value="DEBUG"/></category>
-		<category name="TRewriteRule"><priority value="DEBUG"/></category>
-		<category name="Global"><priority value="DEBUG"/></category>
-		<category name="PresentBasePage"><priority value="DEBUG"/></category>
-		<category name="OneMainWeb.Controls.MenuGroup"><priority value="DEBUG"/></category>
-		<category name="One.Net.BLL.OCache"><priority value="OFF"/></category>
-		<category name="One.Net.BLL.BWebsite"><priority value="DEBUG"/></category>
-	</log4net>  
+  </urlrewritingnet>
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
   <fiftyOne>
