--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -11,7 +11,6 @@
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
@@ -27,6 +26,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="UrlRewritingNet" version="2.0.6.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
