special content improvments
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@275 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -466,8 +466,28 @@
     <Content Include="AdminControls\ScaffoldDynamicEditor.ascx" />
     <Content Include="AdminControls\ScaffoldVirtualTableList.ascx" />
     <Content Include="AdminControls\TextContentModal.ascx" />
+    <Content Include="adm\codemirror\mode\css\css.js" />
+    <Content Include="adm\codemirror\mode\css\index.html" />
+    <Content Include="adm\codemirror\mode\css\less.html" />
+    <Content Include="adm\codemirror\mode\css\less_test.js" />
+    <Content Include="adm\codemirror\mode\css\scss.html" />
+    <Content Include="adm\codemirror\mode\css\scss_test.js" />
+    <Content Include="adm\codemirror\mode\css\test.js" />
+    <Content Include="adm\codemirror\mode\htmlembedded\htmlembedded.js" />
+    <Content Include="adm\codemirror\mode\htmlembedded\index.html" />
+    <Content Include="adm\codemirror\mode\htmlmixed\htmlmixed.js" />
+    <Content Include="adm\codemirror\mode\htmlmixed\index.html" />
+    <Content Include="adm\codemirror\mode\javascript\index.html" />
+    <Content Include="adm\codemirror\mode\javascript\javascript.js" />
+    <Content Include="adm\codemirror\mode\javascript\json-ld.html" />
+    <Content Include="adm\codemirror\mode\javascript\test.js" />
+    <Content Include="adm\codemirror\mode\javascript\typescript.html" />
+    <Content Include="adm\codemirror\mode\xml\index.html" />
+    <Content Include="adm\codemirror\mode\xml\test.js" />
+    <Content Include="adm\codemirror\mode\xml\xml.js" />
     <Content Include="adm\css\adminWikiMenu.css" />
     <Content Include="adm\css\bootstrap.css" />
+    <Content Include="adm\codemirror\codemirror.css" />
     <Content Include="adm\css\dashboard.css" />
     <Content Include="adm\css\default_editor.css" />
     <Content Include="adm\css\one.css" />
@@ -478,6 +498,7 @@
     <Content Include="adm\images\drag.png" />
     <Content Include="adm\js\bootstrap-treeview.js" />
     <Content Include="adm\js\bootstrap.js" />
+    <Content Include="adm\codemirror\codemirror.js" />
     <Content Include="adm\js\jquery.details.js" />
     <Content Include="adm\js\jquery.ui.datepicker-en.js" />
     <Content Include="adm\js\One.js" />
