--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -14,10 +14,10 @@
     </sectionGroup>
     
 	  <sectionGroup name="bundleTransformer">
-		  <section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
-		  <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
-		  <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-	  </sectionGroup>
+		  
+		  
+		  
+	  <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /></sectionGroup>
   </configSections>
   <rssConfiguration>
     <providers>
@@ -93,10 +93,10 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="FormsAuthenticationModule" />
+      <!-- IIS 7.X - Registers 51Degrees Detector Module. Without this call to 51Degrees.core.js won't work.--><remove name="FormsAuthenticationModule" />
       <remove name="UrlRewriteModule" />
       <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
-    </modules>
+    <remove name="Detector" /><add name="Detector" type="FiftyOne.Foundation.Mobile.Detection.DetectorModule, FiftyOne.Foundation" /></modules>
     <handlers>
       <add path="/callbacks/google" name="Owin" verb="*" type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb" />
       <add path="*.gif" name="gif2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
@@ -130,9 +130,9 @@
       
       
       
-      <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
-      <add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
-    </handlers>
+      
+      
+    <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /><add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /></handlers>
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
     </staticContent>
@@ -224,7 +224,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.22.0" newVersion="1.9.22.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.25.0" newVersion="1.9.25.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -241,35 +241,33 @@
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultMinifier="NullMinifier">
-      <minifiers>
-				<add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" />
-        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-      </minifiers>
+      
       <translators>		
-				<add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
-        <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-      </translators>
+				
+        
+      <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /><add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /></translators>
       <fileExtensions>		
-				<add fileExtension=".sass" assetTypeCode="Sass" />
-        <add fileExtension=".scss" assetTypeCode="Scss" />
-        <add fileExtension=".css" assetTypeCode="Css" />
-      </fileExtensions>
-        <postProcessors>
+				
+        
+        
+      <add fileExtension=".css" assetTypeCode="Css" /><add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /></fileExtensions>
+        
+      <postProcessors>
 					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-				</postProcessors>
-      </css>
+				</postProcessors><minifiers>
+					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+				<add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" /></minifiers></css>
       <js defaultMinifier="NullMinifier">
-      <minifiers>		
-				<add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" />
-        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-      </minifiers>
-        <translators>
+      
+        
+        
+      <translators>
 					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				</translators>
-        <fileExtensions>
+				</translators><minifiers>
+					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+				<add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" /></minifiers><fileExtensions>
 					<add fileExtension=".js" assetTypeCode="JavaScript" />
-				</fileExtensions>
-      </js>
+				</fileExtensions></js>
     </core>
   </bundleTransformer>
 </configuration>
