--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -17,7 +17,7 @@
 		  
 		  
 		  
-	  <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /></sectionGroup>
+	  <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /><section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /></sectionGroup>
   </configSections>
   <rssConfiguration>
     <providers>
@@ -224,7 +224,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.25.0" newVersion="1.9.25.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.32.0" newVersion="1.9.32.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -245,12 +245,12 @@
       <translators>		
 				
         
-      <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /><add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /></translators>
+      <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /><add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /></translators>
       <fileExtensions>		
 				
         
         
-      <add fileExtension=".css" assetTypeCode="Css" /><add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /></fileExtensions>
+      <add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /><add fileExtension=".css" assetTypeCode="Css" /></fileExtensions>
         
       <postProcessors>
 					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
