readded ProgressBar control so that poll results actually work.
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@301 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/One.Net.Forms/One.Net.Forms.csproj
+++ b/One.Net.Forms/One.Net.Forms.csproj
@@ -62,6 +62,7 @@
     <Compile Include="BLL\BForm.cs" />
     <Compile Include="BLL\BOForm.cs" />
     <Compile Include="BLL\DbForm.cs" />
+    <Compile Include="Controls\ProgressBar.cs" />
     <Compile Include="custom_modules\FormSelector.ascx.cs">
       <DependentUpon>FormSelector.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
