--- a/One.Net.Forms/One.Net.Forms.csproj
+++ b/One.Net.Forms/One.Net.Forms.csproj
@@ -102,6 +102,7 @@
     <Content Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
+    <Content Include="_js\one.net.forms.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="NLog.config">
