completely removed UrlRewritingNet.UrlRewriter moved One.NET.Forms to a more logical place
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@312 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -3,7 +3,6 @@
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="rssConfiguration" type="One.Net.BLL.WebConfig.RssConfiguration" />
-    <section name="urlrewritingnet" requirePermission="false" type="UrlRewritingNet.Configuration.UrlRewriteSection, UrlRewritingNet.UrlRewriter" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <sectionGroup name="fiftyOne">
@@ -12,12 +11,11 @@
       <section name="detection" type="FiftyOne.Foundation.Mobile.Detection.Configuration.DetectionSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
       <section name="imageOptimisation" type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
     </sectionGroup>
-    
-	  <sectionGroup name="bundleTransformer">
-		  
-		  
-		  
-	  <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /><section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /><section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /></sectionGroup>
+	  <sectionGroup name="bundleTransformer"> 
+	   <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
+     <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+     <section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
+    </sectionGroup>
   </configSections>
   <rssConfiguration>
     <providers>
@@ -36,15 +34,6 @@
     </rules>
 
   </nlog>
-  <urlrewritingnet rewriteOnlyVirtualUrls="true" contextItemsPrefix="QueryString" xmlns="http://www.urlrewriting.net/schemas/config/2006/07">
-    <!--<providers>
-      <add name="TURLProvider" type="One.NET.BLL.TURLProvider" securityTrimmingEnabled="true" />
-    </providers>-->
-    <rewrites>
-      <add name="underscoreRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
-      <!--<add name="MainRedirect" provider="TURLProvider" />-->
-    </rewrites>
-  </urlrewritingnet>
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
   <fiftyOne>
@@ -79,9 +68,6 @@
         <add name="OneSiteMapProvider" type="One.Net.BLL.OneSiteMapProvider" securityTrimmingEnabled="false" connectionStringName="SiteMapConnectionString" />
       </providers>
     </siteMap> 
-    <httpModules>
-      <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
-    </httpModules>
     <webServices>
       <protocols>
         <add name="HttpGet" />
@@ -91,12 +77,22 @@
     </webServices>
   </system.web>
   <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="underscoreRedir" stopProcessing="true">
+          <match url="^/(?!_files)(_.*)+" />
+          <action type="Rewrite" url="~/site_specific/$1" appendQueryString="false" />
+          <!-- add name="underscoreRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" /-->
+        </rule>
+      </rules>
+    </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
-      <!-- IIS 7.X - Registers 51Degrees Detector Module. Without this call to 51Degrees.core.js won't work.--><remove name="FormsAuthenticationModule" />
-      <remove name="UrlRewriteModule" />
-      <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
-    <remove name="Detector" /><add name="Detector" type="FiftyOne.Foundation.Mobile.Detection.DetectorModule, FiftyOne.Foundation" /></modules>
+      <remove name="FormsAuthenticationModule" />
+      <!-- IIS 7.X - Registers 51Degrees Detector Module. Without this call to 51Degrees.core.js won't work.-->
+      <remove name="Detector" />
+      <add name="Detector" type="FiftyOne.Foundation.Mobile.Detection.DetectorModule, FiftyOne.Foundation" />
+    </modules>
     <handlers>
       <add path="/callbacks/google" name="Owin" verb="*" type="Microsoft.Owin.Host.SystemWeb.OwinHttpHandler, Microsoft.Owin.Host.SystemWeb" />
       <add path="*.gif" name="gif2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
