SINGLE page routing working REWRITE not working NOTE THE UPGRADE OF DATABASE!!!!!!!!!!!!!!! !!!!!!!!!!!!!!!!!!!!!!!!!!!!!! TODO: replace ChangePage SP with regular SQL !!!!!!!!
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@313 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/BLL/Sql/2_tables.sql.template
+++ b/BLL/Sql/2_tables.sql.template
@@ -163,9 +163,10 @@ CREATE TABLE [dbo].[pages](
 	[break_persistence] [bit] NOT NULL,
 	[auth_mask] [int] NULL,
 	[redirectToUrl] nvarchar(255) NOT NULL DEFAULT '',
-	[viewGroups] varchar(255) NOT NULL DEFAULT '',
-	[editGroups] varchar(255) NOT NULL DEFAULT '',
-	[requireSSL] bit NOT NULL DEFAULT 0
+	[viewGroups] nvarchar(255) NOT NULL DEFAULT '',
+	[editGroups] nvarchar(255) NOT NULL DEFAULT '',
+	[requireSSL] bit NOT NULL DEFAULT 0,
+	[sub_route_url] nvarchar(255) NULL,
  CONSTRAINT [PK_pages] PRIMARY KEY CLUSTERED 
 (
 	[id] ASC,
