--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -9,6 +9,7 @@
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.11.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
