SCAFFOLD MULTILANGUAGE FIXES/IMPROVEMENTS PLEASE TEST
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@332 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -132,21 +132,29 @@
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
 
+      <remove fileExtension=".mp4" />
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+      <remove fileExtension=".m4v" />
       <mimeMap fileExtension=".m4v" mimeType="video/m4v" />
+      <remove fileExtension=".ogg" />
       <mimeMap fileExtension=".ogg" mimeType="video/ogg" />
+      <remove fileExtension=".ogv" />
       <mimeMap fileExtension=".ogv" mimeType="video/ogg" />
+      <remove fileExtension=".webm" />
       <mimeMap fileExtension=".webm" mimeType="video/webm" />
-
+      <remove fileExtension=".oga" />
       <mimeMap fileExtension=".oga" mimeType="audio/ogg" />
+      <remove fileExtension=".spx" />
       <mimeMap fileExtension=".spx" mimeType="audio/ogg" />
-
+      <remove fileExtension=".svg" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <remove fileExtension=".svgz" />
       <mimeMap fileExtension=".svgz" mimeType="image/svg+xml" />
-
       <remove fileExtension=".eot" />
       <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      <remove fileExtension=".otf" />
       <mimeMap fileExtension=".otf" mimeType="font/otf" />
+      <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
     </staticContent>
    <httpErrors>
