--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -80,9 +80,8 @@
     <rewrite>
       <rules>
         <rule name="underscoreRedir" stopProcessing="true">
-          <match url="^/(?!_files)(_.*)+" />
-          <action type="Rewrite" url="~/site_specific/$1" appendQueryString="false" />
-          <!-- add name="underscoreRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" /-->
+          <match url="^(?!_files)(_.*)+" />
+          <action type="Rewrite" url="site_specific/{R:1}" />
         </rule>
       </rules>
     </rewrite>
