--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -154,7 +154,7 @@
       <remove fileExtension=".otf" />
       <mimeMap fileExtension=".otf" mimeType="font/otf" />
       <remove fileExtension=".woff" />
-      <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
     </staticContent>
    <httpErrors>
         <remove statusCode="404" subStatusCode="-1" />
