--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -389,6 +389,13 @@
     <Compile Include="CommonModules\NavigatePages.ascx.designer.cs">
       <DependentUpon>NavigatePages.ascx</DependentUpon>
     </Compile>
+    <Compile Include="CommonModules\PageTitle.ascx.cs">
+      <DependentUpon>PageTitle.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CommonModules\PageTitle.ascx.designer.cs">
+      <DependentUpon>PageTitle.ascx</DependentUpon>
+    </Compile>
     <Compile Include="CommonModules\VirtualTable.ascx.cs">
       <DependentUpon>VirtualTable.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -490,6 +497,7 @@
     <Content Include="CommonModules\Menu.ascx" />
     <Content Include="CommonModules\NajdiSearch.ascx" />
     <Content Include="CommonModules\NavigatePages.ascx" />
+    <Content Include="CommonModules\PageTitle.ascx" />
     <Content Include="CommonModules\VirtualTable.ascx" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
