modules listing for help with upgrading websites
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@377 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -285,6 +285,13 @@
     <Compile Include="adm\Icons.ashx.cs">
       <DependentUpon>Icons.ashx</DependentUpon>
     </Compile>
+    <Compile Include="adm\Modules.aspx.cs">
+      <DependentUpon>Modules.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="adm\Modules.aspx.designer.cs">
+      <DependentUpon>Modules.aspx</DependentUpon>
+    </Compile>
     <Compile Include="adm\Regulars.aspx.cs">
       <DependentUpon>Regulars.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -480,6 +487,7 @@
     <Content Include="adm\js\jquery.details.js" />
     <Content Include="adm\js\jquery.ui.datepicker-en.js" />
     <Content Include="adm\js\One.js" />
+    <Content Include="adm\Modules.aspx" />
     <Content Include="adm\Regulars.aspx" />
     <Content Include="adm\Scaffold.aspx" />
     <Content Include="adm\ScaffoldConfig.aspx" />
