--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -83,6 +83,14 @@
           <match url="^(?!_files)(_.*)+" />
           <action type="Rewrite" url="site_specific/{R:1}" />
         </rule>
+		 <rule name="Remove trailing slash">
+			<match url="(.*)/$" />
+			<conditions>
+			<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+			<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+			</conditions>
+			<action type="Redirect" redirectType="Permanent" url="{R:1}" />
+		</rule>
       </rules>
     </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
