--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -216,6 +216,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="Account">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
